<resources>
    <string name="app_name">Catan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_player_trading_screen">PlayerTradingScreen</string>
    <string name="title_activity_bank_trading_screen">BankTradingScreen</string>

    <!--Strings for the main game board side menu-->
    <string name="buildRoad">Build Road</string>
    <string name="buildSettlement">Build Settlement</string>
    <string name="buildCity">Build City</string>
    <string name="buyDevelopmentCard">Buy Development Card</string>
    <string name="trade">Trade</string>
    <string name="playDevelopmentCard">Play Development Card</string>
    <string name="brickCardCount">5</string>
    <string name="rockCardCount">5</string>
    <string name="lumberCardCount">5</string>
    <string name="sheepCardCount">5</string>
    <string name="wheatCardCount">5</string>

    <!--Strings for game board arrow keys-->
    <string name="upArrow">↑</string>
    <string name="downArrow">↓</string>
    <string name="leftArrow">←</string>
    <string name="rightArrow">→</string>

    <!--Strings for the trading popup-->
    <string name="tradePopupTitle">What type of trade would you like to do?</string>
    <string name="tradeWithBank">Trade With Bank</string>
    <string name="tradeWithPlayers">Trade With Other Players</string>

    <!--Strings for the trading menus-->
    <string name="acceptButton">Accept Trade</string>
    <string name="wantToTrade">You want to trade:</string>
    <string name="askingFor">You are asking for:</string>
    <string name="returnToGame">Return to Game</string>
    <string name="player1TradeText">Player 1 will trade: Lumber</string>
    <string name="player2TradeText">Player 2 will not trade</string>
    <string name="player3TradeText">Player 3 will trade: Ore</string>
    <string name="makeTrade">Trade with Bank</string>

    <!--Strings for the game settings menu-->
    <string name="random_map">Randomize map?</string>
    <string name="nice_mode_str">Nice Beginning?</string>
    <string name="hard_mode_str">Hard Mode?</string>
    <string name="hide_res_str">Hide Resource Counts?</string>
    <string name="choose_color">Choose your color:</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="start_game">Start Game</string>
    <string name="choose_computers">Choose the number of AI players:</string>
    <string name="two_ai">2</string>
    <string name="three_ai">3</string>

    <!--Strings for the opening menu-->
    <string name="welcome_message">Welcome to Settlers of Catan!</string>
    <string name="tutorial">START\nTUTORIAL</string>
    <string name="new_game">NEW\nGAME</string>
    <string name="title_activity_new_game">newGameActivity</string>
    <string name="new_game_options">New Game Options</string>
    <string name="title_activity_opening_menu">OpeningMenu</string>
    <string name="title_desc">Main title image</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_game_menu">NewGameMenu</string>


</resources>
