<!--@author: Jordan Goldey-->
<!--@date: 9/19/2015-->
<!--@purpose: Trade popup that appears when the trade button is clicked.
This popup links to the trade with bank and trade with other player screens.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/MenuColor"
    android:layout_margin="20dp"
    android:id="@+id/tradePopupLayout"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tradePopupTitle"
        android:id="@+id/tradePopupTitle"
        android:textSize="@dimen/trading_text_size"
        android:textColor="@color/Black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tradeWithPlayers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tradeWithPlayers"
        android:textSize="@dimen/trading_text_size" />

    <Button
        android:id="@+id/tradeWithBank"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tradeWithBank"
        android:textSize="@dimen/trading_text_size" />

    <Button
        android:id="@+id/exitTradePopup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/returnToGame"
        android:textSize="@dimen/trading_text_size" />
</LinearLayout>