<!--@author: Jarrett Oney                  -->
<!--@date:   9/19/2015                     -->
<!--@desc:   This screen welcomes the user -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/MenuColor"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/title_frame">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:src="@drawable/main_title" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:id="@+id/welcome_message"
        android:layout_gravity="center_horizontal"
        android:textIsSelectable="false"
        android:singleLine="false"
        android:typeface="serif"
        android:textSize="65sp"
        android:textStyle="italic"
        android:textColor="@color/Black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_bar">

        <Button
            android:layout_width="@dimen/opening_menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:id="@+id/new_game_button"
            android:onClick="openNewGame"
            android:textSize="70sp" />

        <Button
            android:layout_width="@dimen/opening_menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:id="@+id/tutorial_button"
            android:textSize="70sp" />
    </LinearLayout>

</LinearLayout>
