<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <edu.up.cs301.catan.BoardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff33aaff"
            android:id="@+id/displayArea" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upArrow"
            android:id="@+id/goUpButton"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rightArrow"
            android:id="@+id/goRightButton"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downArrow"
            android:id="@+id/goDownButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftArrow"
            android:id="@+id/goLeftButton"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/MenuColor"
        android:id="@+id/sidebar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50px" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/buildRoadLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buildRoad"
                android:id="@+id/buildRoadButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buildSettlementLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buildSettlement"
                android:id="@+id/buildSettlementButton" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/buildCityLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buildCity"
                android:id="@+id/buildCityButton" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/buyDevelopmentCardLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyDevelopmentCard"
                android:id="@+id/buyDevelopmentCardButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50px" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tradeLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trade"
                android:id="@+id/tradeButton" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/playDevelopmentCardLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playDevelopmentCard"
                android:id="@+id/playDevelopmentCardButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:id="@+id/firstRowOfPlayerCards"
            android:paddingTop="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/brickStub"
                    android:src="@drawable/brick_stub" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="5"
                    android:id="@+id/brickCount"
                    android:textStyle="bold"
                    android:textColor="@color/Black" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/lumberStub"
                    android:src="@drawable/lumber_stub" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="5"
                    android:id="@+id/lumberCount"
                    android:textStyle="bold"
                    android:textColor="@color/Black" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:id="@+id/secondRowOfPlayerCards">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/wheatStub"
                    android:src="@drawable/wheat_stub" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="5"
                    android:id="@+id/wheatCount"
                    android:textStyle="bold"
                    android:textColor="@color/Black" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/sheepStub"
                    android:src="@drawable/sheep_stub" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="5"
                    android:id="@+id/sheepCount"
                    android:textStyle="bold"
                    android:textColor="@color/Black" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/thirdRowOfPlayerCards">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/rockStub"
                    android:src="@drawable/rock_stub" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="5"
                    android:id="@+id/rockCount"
                    android:textStyle="bold"
                    android:textColor="@color/Black" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>
